CSS: fix bug where container was left-aligned for several seconds before centering.

--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -12,6 +12,7 @@
 	border-radius: $container-border-radius;
 	font-family: "Montserrat", sans-serif;
 	height: 800px;
+	margin: 0 auto;
 	padding: 2rem;
 	width: 1024px;
 }
